# netforensics

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  TODO.md
agent/: agent_core.c  agent_fuzz.c  agent_loop.c  agent_loop_poll.c  agent_sim.c  config_defaults.c  config_yaml.c  ctl_ch_query.c  ctl_lua.c  ctl_main.c  flow_acct.c  harness_driver.c  host_alloc.c  ipc_client.c  ipc_server.c  live_arping.c  live_ping.c  live_trace.c  lua_bind.c  lua_repl.c  main.c  perf_sample.c  spool_util.c  tcp_stats.c  tls_egress.c  wifi_stats.c
cmake/toolchains/: aarch64-bootlin.cmake  aarch64-linux-gnu.cmake  armv7-eabihf-bootlin.cmake  openwrt-generic.cmake
config/: cpe_agent.example.yaml  cpe_agent.field.yaml  cpe_agent.lab-edgehost.yaml  forensicsd.example.yaml
cpe/: forensicsd.c
cpe/sysctl/: 99-forensics.conf
deploy/: README.md  cpe_agent.service  forensicsd.service
deploy/lxc/: README.md  netforensics-profile-a.conf  netforensics-profile-b.conf
deploy/prpl-lcm/netforensics-ee/: README.md  container-config-profile-a.json  container-config-profile-b.json  manifest.yaml
deploy/prpl-lcm/netforensics-ee/files/: entrypoint.sh
docs/decisions/: 001-libraries-own-parsing.md  002-ndjson-to-vector.md  003-cpe-agent-placement.md  004-cpe-agent-tls-mbedtls.md  005-cpe-perf-ndjson.md  006-track2-complete.md  007-field-spool-hup-reload.md  008-field-live-icmp-mtls-spool.md  009-lxc-prpl-host-privileges.md
docs/guides/: cpe-agent-daemon.md  cpe-agent-edgehost-pipeline.md  cpe-agent-features.md  cpe-agent-flow-acct.md  cpe-agent-lua.md  cpe-agent-tcp-stats.md  lxc-prpl-containerization.md
examples/lua/: arping_neighbors.lua  ping_sweep.lua  tcp_stats_report.lua  traceroute_report.lua  wifi_report.lua
fuzz/: fuzz_cpe_agent.c
grafana/: cpe_perf_dashboard.json
include/: bmp_ingest.h  cpe_agent.h  cpe_agent_config.h  cpe_agent_fuzz.h  cpe_agent_lua.h  cpe_agent_sim.h  cpe_agent_tls.h  cpe_ctl_ch.h  cpe_ctl_lua.h  cpe_flow_acct.h  cpe_harness.h  cpe_host_alloc.h  cpe_ipc.h  cpe_spool.h  cpe_tcp_stats.h  netforensics.h  nfct_netlink.h  nflog_netlink.h  nl80211_netlink.h
openwrt/: OPKG_ROLLBACK.md  README.md
openwrt/cpe-agent/: Makefile
openwrt/cpe-agent/files/: cpe_agent.init  cpe_agent.yaml
openwrt/netforensics/: Makefile
openwrt/netforensics/files/: forensicsd.init
scripts/: cross_build_aarch64.sh  cross_build_ipq807x.sh  fetch_bootlin_aarch64.sh  fetch_bootlin_armv7.sh  run-cpe-daemon-lab.sh  stage_lxc_rootfs.sh
sql/: 001_schema.sql  002_dictionary.sql  002_dictionary_notes.md  003_cpe_perf_samples.sql  004_ttl_retention.sql  005_async_insert_settings.sql  006_cpe_tcp_stats.sql
sql/queries/: blast_radius.sql  helpers.sql  inbound_path.sql  outbound_path.sql  tcp_prefix_bandwidth.sql  tcp_remote_loss.sql
src/: bmp_ingest.c  bmp_ingest_main.c  flow_correlate.c  gateway_stub_main.c  ipfix_ingest.c  ipfix_ingest_main.c  nfct_netlink.c  nflog_netlink.c  nl80211_netlink.c
tests/: test_bmp_ingest.c  test_correlate.c  test_cpe_agent.c  test_cpe_agent_lua.c  test_cpe_agent_track2.c  test_cpe_flow_acct.c  test_cpe_ipc.c  test_cpe_tcp_stats.c  test_host_pipeline.c  test_sql_fixtures.c
vector/: vector.yaml
